...
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_fields"
        android:contentDescription="@string/todo"
        android:elevation="10dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/lineupConstraintLayout"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/positionInput11" />

        <AutoCompleteTextView
            android:id="@+id/positionInput"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/input_fields"
...
